# FPLOptimizer

./: .gitignore  .railwayignore  DEPLOYMENT.md  FPL_API_ENDPOINTS.md  QUICK_DEPLOY.md  README.md  SETUP.md  WINDOWS_SETUP.md  nixpacks.toml  railway.toml  render.yaml
backend/: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  start.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py  exceptions.py  middleware.py
backend/app/api/v1/: __init__.py  router.py
backend/app/core/: __init__.py  config.py  container.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/domain/entities/: player.py
backend/app/domain/enums/: api_status.py  injury_status.py  position.py
backend/app/domain/interfaces/: player_repository_interface.py
backend/app/infrastructure/cache/: redis_cache.py
backend/app/infrastructure/http/: fpl_client.py
backend/app/models/: player.py  player_with_fixtures.py  team.py  team_pick.py
backend/app/repositories/: player_repository.py  repository_factory.py  team_repository.py
backend/app/repositories/players/: fpl_player_repository.py  mock_players_repository.py
backend/app/schemas/: __init__.py  base.py  responses.py
backend/app/schemas/internal/: __init__.py  cache.py  filters.py  repository.py
backend/app/schemas/requests/: __init__.py  (+1 more)
backend/app/services/: expected_points_service.py  player_service.py  team_service.py  transfer_solver_service.py
(+79 files in other folders)
